Estrutura HTML do jogo criada

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Genius Game</title>
 </head>
 <body>
-    
+    <main class="main-game">
+        <section class="genius">
+            <section class="blue"></section>
+            <section class="yellow"></section>
+            <section class="red"></section>
+            <section class="green"></section>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
