--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Genius Game</title>
 </head>
 <body>
+    <h1 id="title">GENIUS</h1>
     <main class="main-game">
         <section class="genius">
             <section class="blue"></section>
